Issue #2875187 by peterpolman: Fixed z-index of first stream-item.

--- a/themes/socialbase/assets/css/stream.css
+++ b/themes/socialbase/assets/css/stream.css
@@ -19,6 +19,10 @@
   position: relative;
 }
 
+.stream-item:first-child {
+  z-index: 2;
+}
+
 .stream-icon {
   top: 19px;
   left: 4px;
@@ -55,10 +59,6 @@
   border-right-color: white;
   border-width: 6px;
   top: 17px;
-}
-
-.card--stream .card__block {
-  z-index: initial;
 }
 
 .card--stream .mediawrapper {
